Colaboratory を使用して作成しました

--- a/doingmath01.ipynb
+++ b/doingmath01.ipynb
@@ -6,7 +6,7 @@
       "name": "doingmath01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMx35/ybXmLG5b+K52zHqbo",
+      "authorship_tag": "ABX9TyOUNygTIcm6kGTmxvKkJiFD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5802,7 +5802,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 58
         },
-        "outputId": "2a9872dc-65d8-4e92-e432-9faefd299380"
+        "outputId": "12196c73-bd6a-4e43-af7e-3181a29ac4e3"
       },
       "source": [
         "from sympy import *\n",
@@ -5815,7 +5815,7 @@
         "res = expr.subs({x: 1, y: 2})\n",
         "display(res)"
       ],
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6830,7 +6830,7 @@
         "\n",
         "solve((expr1, expr2))\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6862,7 +6862,7 @@
       "source": [
         "solve((expr1, expr2), dict=True)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6896,7 +6896,7 @@
         "display(expr1.subs({x:soln[x], y:soln[y]}))\n",
         "display(expr2.subs({x:soln[x], y:soln[y]}))\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6962,7 +6962,7 @@
         "\n",
         "fig.show()"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7016,7 +7016,7 @@
         "ax.grid(true)\n",
         "fig.show()"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7071,7 +7071,7 @@
         "ax.grid(true)\n",
         "fig.show()\n"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7085,6 +7085,68 @@
             "tags": [],
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CBstP41OSASe",
+        "colab_type": "text"
+      },
+      "source": [
+        "文字列で表された方程式を sympify して、y で solve すればグラフが描ける。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NdYPV4R5S4W8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "4fef33b5-cd82-440e-96e9-cf2b18fb7046"
+      },
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "from sympy import *\n",
+        "\n",
+        "x,y = symbols('x, y')\n",
+        "\n",
+        "expr_text = \"2*x + 3*y - 6\"\n",
+        "expr = sympify(expr_text)\n",
+        "solutions = solve(expr, y)\n",
+        "print (solutions[0].subs({x: 5}))\n",
+        "\n",
+        "# fig = plt.figure()\n",
+        "# ax = fig.add_subplot()\n",
+        "\n",
+        "# xaxis = np.linspace(-10, 10, 40)\n",
+        "# y = []\n",
+        "# for i in temp :\n",
+        "#     res = solutions[0].subs({x: 5})\n",
+        "#     y.append(res)\n",
+        "\n",
+        "\n",
+        "# ax.plot(x, y)\n",
+        "# ax.set_title('expr_text')\n",
+        "# ax.set_xlabel('x')\n",
+        "# ax.set_ylabel('y')\n",
+        "\n",
+        "# ax.grid(true)\n",
+        "# fig.show()\n"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "-4/3\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
