--- a/temp.ipynb
+++ b/temp.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "temp.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOXkbHoQZSS/WVRjf8NCW9i",
+      "authorship_tag": "ABX9TyMBWFnaSXuEElJZ7mMgVHKi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
         "\n",
         "print(xx)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -51,6 +51,29 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "T5B-NN-9qmqI",
+        "colab_type": "text"
+      },
+      "source": [
+        "`$5 ドル \\$10 ドル"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ixTQ5oaDqt7D",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
