--- a/doingmath01.ipynb
+++ b/doingmath01.ipynb
@@ -6,7 +6,7 @@
       "name": "doingmath01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMjOYArGC/wsyH6aZAyoUQU",
+      "authorship_tag": "ABX9TyPpDL06aAuoUqLfffeNdZYB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9278,7 +9278,7 @@
         "colab_type": "text"
       },
       "source": [
-        "次に架空のATMを考え、次のような確率で紙幣 \\$5, \\$10, \\$20, \\$50 のドル札が発行されるとする。"
+        "次に架空の ATM を考え、次のような確率で紙幣 `$`5, `$`10, `$`20, `$`50 のドル札が発行されるとする。"
       ]
     },
     {
@@ -9320,7 +9320,7 @@
         "ax.set_axis_off()\n",
         "plt.show()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -9344,7 +9344,7 @@
         "colab_type": "text"
       },
       "source": [
-        "\\$5ドル札と\\$10ドル札の確率は 1/6、\\$20ドル札と\\$50ドル札の確率は 1/3 になる。"
+        "`$`5ドル札と`$`10ドル札の確率は 1/6、`$`20ドル札と`$`50ドル札の確率は 1/3 になる。"
       ]
     },
     {
