--- a/doingmath01.ipynb
+++ b/doingmath01.ipynb
@@ -6,7 +6,7 @@
       "name": "doingmath01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPpDL06aAuoUqLfffeNdZYB",
+      "authorship_tag": "ABX9TyNwzU4FfJL7DH+NY5RdF6Pf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9344,7 +9344,19 @@
         "colab_type": "text"
       },
       "source": [
-        "`$`5ドル札と`$`10ドル札の確率は 1/6、`$`20ドル札と`$`50ドル札の確率は 1/3 になる。"
+        "`$`5ドル札と`$`10ドル札の確率は 1/6、`$`20ドル札と`$`50ドル札の確率は 1/3 になる。$$$と3回かいたらどうか。$s$ は。\n",
+        "$s$ ha\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GHF41rzC8PHv",
+        "colab_type": "text"
+      },
+      "source": [
+        "suushiki $x = 3$ は &#36;56はどうか。\n"
       ]
     },
     {
