Colaboratory を使用して作成しました

--- a/animation.ipynb
+++ b/animation.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "animation.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNr34gKOxtL1KYsmbIbvH9z",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPloRkj+aeVzzAFbWoM9GL1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -85,7 +86,7 @@
         "from IPython.display import HTML\n",
         "HTML(anim.to_jshtml())"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12874,7 +12875,7 @@
         "from IPython.display import HTML\n",
         "HTML(ani.to_jshtml())"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -17230,6 +17231,91 @@
           "execution_count": 9
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zQnApZwCKibV"
+      },
+      "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "from matplotlib.animation import FuncAnimation\n",
+        "from IPython.display import HTML\n",
+        "\n",
+        "fig, ax = plt.subplots()\n",
+        "xdata, ydata = [], []\n",
+        "ln, = plt.plot([], [], 'ro')\n",
+        "\n",
+        "def init():\n",
+        "    ax.set_xlim(0, 2 * np.pi)\n",
+        "    ax.set_ylim(-1, 1)\n",
+        "    return ln,\n",
+        "\n",
+        "def update(frame):\n",
+        "    xdata.append(frame)\n",
+        "    ydata.append(np.sin(frame))\n",
+        "    ln.set_data(xdata, ydata)\n",
+        "    return ln,\n",
+        "\n",
+        "ani = FuncAnimation(fig, update, frames=np.linspace(0, 2 * np.pi, 128),\n",
+        "                    init_func=init, blit=True, interval=50)\n",
+        "\n",
+        "HTML(ani.to_jshtml())\n",
+        "# HTML(ani.to_html5_video())  # またはこちら"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ji-T7qQdKqQ-"
+      },
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import matplotlib.animation\n",
+        "import numpy as np\n",
+        "\n",
+        "t = np.linspace(0, 6*np.pi, num=60)\n",
+        "x = 2.0 * np.cos(t) + 5.0 * np.cos(2.0/3.0 * t)\n",
+        "y = 2.0 * np.sin(t) - 5.0 * np.sin(2.0/3.0 * t)\n",
+        "\n",
+        "fig, ax = plt.subplots(figsize=(5, 5))\n",
+        "l, = ax.plot([-7, 7],[-7, 7])\n",
+        "\n",
+        "animate = lambda i: l.set_data(x[:i], y[:i])\n",
+        "ani = matplotlib.animation.FuncAnimation(fig, animate, frames=len(t), interval = 1000/30.0)\n",
+        "\n",
+        "from IPython.display import HTML\n",
+        "HTML(ani.to_jshtml())"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "77psbFkUKtg8"
+      },
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import matplotlib.animation\n",
+        "import numpy as np\n",
+        "t = np.linspace(0,2*np.pi)\n",
+        "x = np.sin(t)\n",
+        "fig, ax = plt.subplots()\n",
+        "plt.close()\n",
+        "ax.axis([0,2*np.pi,-1,1])\n",
+        "l, = ax.plot([],[])\n",
+        "def animate(i):\n",
+        "    l.set_data(t[:i], x[:i])\n",
+        "ani = matplotlib.animation.FuncAnimation(fig, animate, frames=len(t))\n",
+        "from IPython.display import HTML\n",
+        "HTML(ani.to_jshtml())"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
