--- a/doingmath02.ipynb
+++ b/doingmath02.ipynb
@@ -6,7 +6,7 @@
       "name": "doingmath02.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP8Q1Wv4HkwQj03mnaPI9Sx",
+      "authorship_tag": "ABX9TyNn2lKb7Vzyaq48LWR3Oac7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -138,7 +138,7 @@
         "ax.set_aspect('equal')\n",
         "plt.show()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -200,7 +200,7 @@
         "ax.axis('equal')\n",
         "plt.show()"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -262,7 +262,7 @@
         "from IPython.display import HTML\n",
         "HTML(anim.to_jshtml())"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5771,6 +5771,54 @@
           "execution_count": 5
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hNjpN-z96Skp"
+      },
+      "source": [
+        "発射物の軌道のアニメーション"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TXQOdO5m6W9v"
+      },
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "from matplotlib.animation import FuncAnimation\n",
+        "import math\n",
+        "\n",
+        "u = 5.0\n",
+        "theta = 60\n",
+        "theta = math.radians(theta)\n",
+        "g = 9.8\n",
+        "\n",
+        "fig = plt.figure()\n",
+        "ax = fig.add_subplot()\n",
+        "ax.set_aspect('equal')\n",
+        "\n",
+        "\n",
+        "circle = plt.Circle((0, 0), radius=0.5)\n",
+        "ax.add_patch(circle)\n",
+        "\n",
+        "\n",
+        "def update_radius(i, circle):\n",
+        "    circle.radius = i * 0.5\n",
+        "    return circle\n",
+        "\n",
+        "\n",
+        "anim = FuncAnimation(fig, update_radius, fargs=(circle,), frames=30, interval=200)\n",
+        "\n",
+        "plt.title('Simple Circle Animation')\n",
+        "plt.close()\n",
+        "from IPython.display import HTML\n",
+        "HTML(anim.to_jshtml())"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
