Colaboratory を使用して作成しました

--- a/doingmath02.ipynb
+++ b/doingmath02.ipynb
@@ -6,7 +6,7 @@
       "name": "doingmath02.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN8SkLZAc2nLKkyWCEU64bx",
+      "authorship_tag": "ABX9TyPMnVSZ0GrAnvzrVgO8MEcT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8623,287 +8623,26 @@
         "id": "dL3I56lHTBTU"
       },
       "source": [
-        "matplotlib.pyplotにも多少の図形関数、 Circle など、があるが、たぶん過去のなごりで、matplotlib.patches から import するのが正しいのだろう。"
+        "matplotlib.pyplotにも多少の図形関数、 Circle など、があるが、たぶん過去のなごりで、matplotlib.patches から import するのが正しいのだろう。\n",
+        "\n",
+        "> import matplotlib.patches  \n",
+        "> dir (matplotlib.patches)\n",
+        "\n",
+        "してみると、いろいろな図形が描けるのがわかる。\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "w3gE8Y1hOsLG",
-        "outputId": "4e5aca41-85aa-4d80-f4e1-8923205623b2",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        }
+        "id": "w3gE8Y1hOsLG"
       },
       "source": [
-        "import matplotlib.pyplot\n",
-        "dir (matplotlib.pyplot)"
+        "# import matplotlib.patches\n",
+        "# dir (matplotlib.patches)"
       ],
-      "execution_count": 31,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['Annotation',\n",
-              " 'Arrow',\n",
-              " 'Artist',\n",
-              " 'AutoLocator',\n",
-              " 'Axes',\n",
-              " 'Button',\n",
-              " 'Circle',\n",
-              " 'Figure',\n",
-              " 'FigureCanvasBase',\n",
-              " 'FixedFormatter',\n",
-              " 'FixedLocator',\n",
-              " 'FormatStrFormatter',\n",
-              " 'Formatter',\n",
-              " 'FuncFormatter',\n",
-              " 'GridSpec',\n",
-              " 'IndexLocator',\n",
-              " 'Line2D',\n",
-              " 'LinearLocator',\n",
-              " 'Locator',\n",
-              " 'LogFormatter',\n",
-              " 'LogFormatterExponent',\n",
-              " 'LogFormatterMathtext',\n",
-              " 'LogLocator',\n",
-              " 'MaxNLocator',\n",
-              " 'MultipleLocator',\n",
-              " 'Normalize',\n",
-              " 'NullFormatter',\n",
-              " 'NullLocator',\n",
-              " 'Number',\n",
-              " 'PolarAxes',\n",
-              " 'Polygon',\n",
-              " 'Rectangle',\n",
-              " 'ScalarFormatter',\n",
-              " 'Slider',\n",
-              " 'Subplot',\n",
-              " 'SubplotTool',\n",
-              " 'Text',\n",
-              " 'TickHelper',\n",
-              " 'Widget',\n",
-              " '_INSTALL_FIG_OBSERVER',\n",
-              " '_IP_REGISTERED',\n",
-              " '__builtins__',\n",
-              " '__cached__',\n",
-              " '__doc__',\n",
-              " '__file__',\n",
-              " '__loader__',\n",
-              " '__name__',\n",
-              " '__package__',\n",
-              " '__spec__',\n",
-              " '_auto_draw_if_interactive',\n",
-              " '_backend_mod',\n",
-              " '_get_running_interactive_framework',\n",
-              " '_interactive_bk',\n",
-              " '_log',\n",
-              " '_pylab_helpers',\n",
-              " '_setp',\n",
-              " '_setup_pyplot_info_docstrings',\n",
-              " '_show',\n",
-              " 'acorr',\n",
-              " 'angle_spectrum',\n",
-              " 'annotate',\n",
-              " 'arrow',\n",
-              " 'autoscale',\n",
-              " 'autumn',\n",
-              " 'axes',\n",
-              " 'axhline',\n",
-              " 'axhspan',\n",
-              " 'axis',\n",
-              " 'axvline',\n",
-              " 'axvspan',\n",
-              " 'bar',\n",
-              " 'barbs',\n",
-              " 'barh',\n",
-              " 'bone',\n",
-              " 'box',\n",
-              " 'boxplot',\n",
-              " 'broken_barh',\n",
-              " 'cbook',\n",
-              " 'cla',\n",
-              " 'clabel',\n",
-              " 'clf',\n",
-              " 'clim',\n",
-              " 'close',\n",
-              " 'cm',\n",
-              " 'cohere',\n",
-              " 'colorbar',\n",
-              " 'colormaps',\n",
-              " 'connect',\n",
-              " 'contour',\n",
-              " 'contourf',\n",
-              " 'cool',\n",
-              " 'copper',\n",
-              " 'csd',\n",
-              " 'cycler',\n",
-              " 'dedent',\n",
-              " 'delaxes',\n",
-              " 'deprecated',\n",
-              " 'disconnect',\n",
-              " 'docstring',\n",
-              " 'draw',\n",
-              " 'draw_all',\n",
-              " 'draw_if_interactive',\n",
-              " 'errorbar',\n",
-              " 'eventplot',\n",
-              " 'figaspect',\n",
-              " 'figimage',\n",
-              " 'figlegend',\n",
-              " 'fignum_exists',\n",
-              " 'figtext',\n",
-              " 'figure',\n",
-              " 'fill',\n",
-              " 'fill_between',\n",
-              " 'fill_betweenx',\n",
-              " 'findobj',\n",
-              " 'flag',\n",
-              " 'functools',\n",
-              " 'gca',\n",
-              " 'gcf',\n",
-              " 'gci',\n",
-              " 'get',\n",
-              " 'get_backend',\n",
-              " 'get_cmap',\n",
-              " 'get_current_fig_manager',\n",
-              " 'get_figlabels',\n",
-              " 'get_fignums',\n",
-              " 'get_plot_commands',\n",
-              " 'get_scale_docs',\n",
-              " 'get_scale_names',\n",
-              " 'getp',\n",
-              " 'ginput',\n",
-              " 'gray',\n",
-              " 'grid',\n",
-              " 'hexbin',\n",
-              " 'hist',\n",
-              " 'hist2d',\n",
-              " 'hlines',\n",
-              " 'hot',\n",
-              " 'hsv',\n",
-              " 'importlib',\n",
-              " 'imread',\n",
-              " 'imsave',\n",
-              " 'imshow',\n",
-              " 'inferno',\n",
-              " 'inspect',\n",
-              " 'install_repl_displayhook',\n",
-              " 'interactive',\n",
-              " 'ioff',\n",
-              " 'ion',\n",
-              " 'isinteractive',\n",
-              " 'jet',\n",
-              " 'legend',\n",
-              " 'locator_params',\n",
-              " 'logging',\n",
-              " 'loglog',\n",
-              " 'magma',\n",
-              " 'magnitude_spectrum',\n",
-              " 'margins',\n",
-              " 'matplotlib',\n",
-              " 'matshow',\n",
-              " 'minorticks_off',\n",
-              " 'minorticks_on',\n",
-              " 'mlab',\n",
-              " 'new_figure_manager',\n",
-              " 'nipy_spectral',\n",
-              " 'np',\n",
-              " 'pause',\n",
-              " 'pcolor',\n",
-              " 'pcolormesh',\n",
-              " 'phase_spectrum',\n",
-              " 'pie',\n",
-              " 'pink',\n",
-              " 'plasma',\n",
-              " 'plot',\n",
-              " 'plot_date',\n",
-              " 'plotfile',\n",
-              " 'plotting',\n",
-              " 'polar',\n",
-              " 'prism',\n",
-              " 'psd',\n",
-              " 'quiver',\n",
-              " 'quiverkey',\n",
-              " 'rc',\n",
-              " 'rcParams',\n",
-              " 'rcParamsDefault',\n",
-              " 'rcParamsOrig',\n",
-              " 'rc_context',\n",
-              " 'rcdefaults',\n",
-              " 'rcsetup',\n",
-              " 're',\n",
-              " 'register_cmap',\n",
-              " 'rgrids',\n",
-              " 'savefig',\n",
-              " 'sca',\n",
-              " 'scatter',\n",
-              " 'sci',\n",
-              " 'semilogx',\n",
-              " 'semilogy',\n",
-              " 'set_cmap',\n",
-              " 'set_loglevel',\n",
-              " 'setp',\n",
-              " 'show',\n",
-              " 'silent_list',\n",
-              " 'specgram',\n",
-              " 'spring',\n",
-              " 'spy',\n",
-              " 'stackplot',\n",
-              " 'stem',\n",
-              " 'step',\n",
-              " 'streamplot',\n",
-              " 'style',\n",
-              " 'subplot',\n",
-              " 'subplot2grid',\n",
-              " 'subplot_tool',\n",
-              " 'subplots',\n",
-              " 'subplots_adjust',\n",
-              " 'summer',\n",
-              " 'suptitle',\n",
-              " 'switch_backend',\n",
-              " 'sys',\n",
-              " 'table',\n",
-              " 'text',\n",
-              " 'thetagrids',\n",
-              " 'tick_params',\n",
-              " 'ticklabel_format',\n",
-              " 'tight_layout',\n",
-              " 'time',\n",
-              " 'title',\n",
-              " 'tricontour',\n",
-              " 'tricontourf',\n",
-              " 'tripcolor',\n",
-              " 'triplot',\n",
-              " 'twinx',\n",
-              " 'twiny',\n",
-              " 'uninstall_repl_displayhook',\n",
-              " 'violinplot',\n",
-              " 'viridis',\n",
-              " 'vlines',\n",
-              " 'waitforbuttonpress',\n",
-              " 'warn_deprecated',\n",
-              " 'winter',\n",
-              " 'xcorr',\n",
-              " 'xkcd',\n",
-              " 'xlabel',\n",
-              " 'xlim',\n",
-              " 'xscale',\n",
-              " 'xticks',\n",
-              " 'ylabel',\n",
-              " 'ylim',\n",
-              " 'yscale',\n",
-              " 'yticks']"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 31
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
