Colaboratory を使用して作成しました

--- a/doingmath02.ipynb
+++ b/doingmath02.ipynb
@@ -6,7 +6,7 @@
       "name": "doingmath02.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNVgqW6/L7r6wxROwU6uAbk",
+      "authorship_tag": "ABX9TyN+lhxJYcnNsirTY2uvVOzO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8601,7 +8601,7 @@
         "ax.axis('scaled')\n",
         "plt.show()\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8689,7 +8689,7 @@
         "ax.axis('scaled')\n",
         "plt.show()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8849,7 +8849,7 @@
         "ax.set_title('Sierpinski with {0} points'.format(n))\n",
         "plt.show()\n"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8874,6 +8874,66 @@
       "source": [
         ""
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "41Ub3hArhpWa"
+      },
+      "source": [
+        "'''\n",
+        "Henon function - strange attractor animation\n",
+        "Thanks to https://jakevdp.github.io/blog/2012/08/18/matplotlib-animation-tutorial/ for matplotlib + animation stuff\n",
+        "'''\n",
+        "\n",
+        "import matplotlib.pyplot as plt\n",
+        "from matplotlib import animation\n",
+        "\n",
+        "def transform1(p):\n",
+        "    x,y  = p\n",
+        "    x1 = y + 1.0 - 1.4*x**2\n",
+        "    y1 = 0.3*x\n",
+        "\n",
+        "    return x1, y1\n",
+        "\n",
+        "def update_points(i, x, y, plot):\n",
+        "    plot.set_data(x[:i], y[:i])\n",
+        "    return plot,\n",
+        "    \n",
+        "if __name__ == '__main__':\n",
+        "    p = (0, 0)\n",
+        "    x = [p[0]]\n",
+        "    y = [p[1]]\n",
+        "    for i in range(10000):\n",
+        "        p = transform1(p)\n",
+        "        x.append(p[0])\n",
+        "        y.append(p[1])\n",
+        "\n",
+        "    fig = plt.gcf()\n",
+        "    ax = plt.axes(xlim = (min(x), max(x)),\n",
+        "                  ylim = (min(y), max(y)))\n",
+        "    plot, = ax.plot([], [], 'o')\n",
+        "    anim = animation.FuncAnimation(fig, update_points,\n",
+        "                                   fargs=(x, y, plot),\n",
+        "                                   frames = len(x),\n",
+        "                                   interval = 25,\n",
+        "                                   blit = True)\n",
+        "    plt.title('Henon function')\n",
+        "    anim.save('henon_animation.mp4', fps=30, extra_args=['-vcodec', 'libx264'])\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8pB_SOjMhnFQ"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
