Colaboratory を使用して作成しました

--- a/doingmath01.ipynb
+++ b/doingmath01.ipynb
@@ -6,7 +6,7 @@
       "name": "doingmath01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN4hM0y6+grJeseDG16TWDn",
+      "authorship_tag": "ABX9TyP75CbZiK4mAhGR3wvoYBl8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,13 +38,7 @@
         "\n",
         "を `Colab` でなぞりながら読む。\n",
         "\n",
-        "本のまえがきに高校数学でプログラミングを学ぶ、と書いてあるので、あちらの高校数学の概要がわかり、自分にとっては復習になるかもしれない。\n",
-        "\n",
-        "途中でめげるかもしれないがとりあえず始めてみよう。\n",
-        "\n",
-        "http://www.nostarch.com/doingmathwithpython/ にプログラムとヒントがあるとのこと。\n",
-        "\n",
-        "しかし!!!! とりあえずチャレンジ問題はやらずに先に進んで終わらせることを先行しよう。\n"
+        "本のまえがきに高校数学でプログラミングを学ぶ、と書いてあるので、あちらの高校数学の概要がわかり、復習になるかもしれない。\n"
       ]
     },
     {
@@ -644,17 +638,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "lHA1rB9gLflQ",
-        "outputId": "3922a0bc-a991-41b7-ae97-5f45ae212bde",
+        "outputId": "7d8a9c43-3997-4ab4-f407-f1b90bcd680f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 52
         }
       },
       "source": [
         "from fractions import Fraction\n",
-        "display(1.5 + Fraction (1, 3))"
+        "display(1.5 + Fraction (1, 3))\n",
+        "print(1.5 + Fraction (1, 3))\n"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
@@ -666,6 +661,13 @@
           "metadata": {
             "tags": []
           }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "1.8333333333333333\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -835,6 +837,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "E_M8ZQKRrVDl"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
