Colaboratory を使用して作成しました

--- a/doingmath01.ipynb
+++ b/doingmath01.ipynb
@@ -6,7 +6,7 @@
       "name": "doingmath01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPmVwUF6OS7R4BKMSffY2ND",
+      "authorship_tag": "ABX9TyO5CHIRu6zNetfaQ7CIWsX6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2226,15 +2226,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "nZG6fJsriB2_"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "b1S30FviQ_Is"
       },
       "source": [
@@ -2403,7 +2394,7 @@
       },
       "source": [
         "デカルト平面では1つの数値ではなく、2つの数値で点を表す。\n",
-        "記述します。図の点Aを2つの数値x、yで表し、（x、y）と書き、点の座標 `coordinates`と呼ぶ。"
+        "図の点Aを2つの数値x、yで表し、（x、y）と書き、点の座標 `coordinates`と呼ぶ。"
       ]
     },
     {
@@ -2649,7 +2640,7 @@
         "id": "_HJC4CFJTYWO"
       },
       "source": [
-        "# iterating"
+        "# 数え上げる iterating "
       ]
     },
     {
@@ -2728,7 +2719,7 @@
         "ax = fig.add_subplot()\n",
         "\n",
         "ax.plot(x_numbers, y_numbers, 'bo-')\n",
-        "# ax.plot(x_numbers, y_numbers, marker='o')\n",
+        "\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -2898,7 +2889,9 @@
         "id": "ijuCyVLfS8Gt"
       },
       "source": [
-        "`plt.savefig('mygraph.svg')` とすると、svg に書き出せる。"
+        "`plt.savefig('mygraph.svg')` とすると、svg に書き出せる。\n",
+        "\n",
+        "書き出したファイルはダウンロードできる。"
       ]
     },
     {
@@ -8111,6 +8104,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "quSwH-R3Qpfq"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
