Colaboratory を使用して作成しました

--- a/doingmath01.ipynb
+++ b/doingmath01.ipynb
@@ -6,7 +6,7 @@
       "name": "doingmath01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMeZwoWe1FmHBVd99fYJmzh",
+      "authorship_tag": "ABX9TyOo+iRpb5vMWgEB6LTjFbtv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,9 +36,27 @@
         "> Doing Math with Python: Use Programming to Explore Algebra, Statistics, Calculus, and More!  \n",
         "> Amit Saha\n",
         "\n",
-        "を `Colab` でなぞりながら読む。\n",
+        "を Colab でなぞりながら読む。\n",
         "\n",
-        "本のまえがきに高校数学でプログラミングを学ぶ、と書いてあるので、あちらの高校数学の概要がわかり、復習になるかもしれない。\n"
+        "本のまえがきに高校数学でプログラミングを学ぶ、と書いてあるので、あちら(アメリカ?)の高校数学の概要がわかり、復習になるかもしれない。\n",
+        "\n",
+        "元の本の章立て\n",
+        "1. 数を扱う\n",
+        "1. データをグラフ化する\n",
+        "1. データを統計的に表現する\n",
+        "1. Sympy を使った代数と数式処理\n",
+        "1. 集合と確率で遊ぶ\n",
+        "1. 幾何図形とフラクタルの描画\n",
+        "1. 微積分を解く\n",
+        "\n",
+        "この内、1章から5章までを https://colab.research.google.com/github/kalz2q/mycolabnotebooks/blob/master/doingmath01.ipynb、残りを https://colab.research.google.com/github/kalz2q/mycolabnotebooks/blob/master/doingmath02.ipynb でなぞっている。\n",
+        "\n",
+        "元の本のプログラムは多くの場合、main を持ったプログラムの形にしてあるのに対し、この Cobol での学習は コードセルで走るように書き直した。\n",
+        "\n",
+        "とりあえず動くようにはしてあるつもりだが、改善の余地はたくさんあると思う。\n",
+        "\n",
+        "ご意見をお寄せください。\n",
+        "\n"
       ]
     },
     {
