Colaboratory を使用して作成しました

--- a/doingmath01.ipynb
+++ b/doingmath01.ipynb
@@ -6,7 +6,7 @@
       "name": "doingmath01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNdNr4PhJAoIy2df1RTl5Pn",
+      "authorship_tag": "ABX9TyPnkf5oq0icE1tvKhutPA4t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9376,7 +9376,7 @@
         "    avg = roll(trial)\n",
         "    print('Trials: {0} Trial average {1}'.format(trial, avg))"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9399,6 +9399,7 @@
       },
       "source": [
         "### 何回で破産するか\n",
+        "課題 5-3\n",
         "\n",
         "コイントスで表が出れば、&#36;1 ドルをもらい、裏が出れば &#36;1.5 ドル失うゲームとする。 金額を指定して破産するまでトスを繰り返すプログラムを作る。\n",
         "\n",
@@ -9422,6 +9423,7 @@
       },
       "source": [
         "### トランプのカードをシャフルする\n",
+        "課題 5-4\n",
         "\n",
         "トランプのカードを 1 から 52 までの数字で表し、シャフルした結果を次のような数字のリストで返すプログラムを作る。\n",
         "\n",
@@ -9521,6 +9523,7 @@
       },
       "source": [
         "### 円の面積 モンテカルロ法\n",
+        "課題 5-5\n",
         "\n",
         "辺の長さが $2r$ の正方形に内接する半径 $r$ の円がある。ダーツを投げて円の中に入ったものを $N$、円の外に当たったものを $M$として次の分数を計算する。\n",
         "\n",
@@ -9544,6 +9547,38 @@
         "Area: 12.566370614359172, Estimated (100000 darts): 12.58176  \n",
         "Area: 12.566370614359172, Estimated (1000000 darts): 12.560128  "
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "k46mEtRG0Lhu"
+      },
+      "source": [
+        "import math\n",
+        "import random\n",
+        "def estimate(radius, total_points):\n",
+        "center = (radius, radius)\n",
+        "in_circle = 0\n",
+        "for i in range(total_points):\n",
+        "x = random.uniform(0, 2*radius)\n",
+        "y = random.uniform(0, 2*radius)\n",
+        "p = (x, y)\n",
+        "# distance of the point created from circle's center\n",
+        "d = math.sqrt((p[0]-center[0])**2 + (p[1]-center[1])**2)\n",
+        "if d <= radius:\n",
+        "in_circle += 1\n",
+        "area_of_square = (2*radius)**2\n",
+        "return (in_circle/total_points)*area_of_square\n",
+        "34     Chapter 5 Programming SolutionsDoing Math with Python (Programming Challenge Solutions), © 2015 by Amit Saha\n",
+        "if __name__ == '__main__':\n",
+        "radius = float(input('Radius: '))\n",
+        "area_of_circle = math.pi*radius**2\n",
+        "for points in [10**3, 10**5, 10**6]:\n",
+        "print('Area: {0}, Estimated ({1}): {2}'.\n",
+        "format(area_of_circle, points, estimate(radius, points)))"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
