Colaboratory を使用して作成しました

--- a/doingmath01.ipynb
+++ b/doingmath01.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "doingmath01.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNNVuMI54Id9X36s4RHQZPN",
+      "authorship_tag": "ABX9TyNNWBqGYfQGDb2fDd5UVEtg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9400,19 +9400,50 @@
         "### 何回で破産するか\n",
         "課題 5-3\n",
         "\n",
-        "コイントスで表が出れば、&#36;1 ドルをもらい、裏が出れば &#36;1.5 ドル失うゲームとする。 金額を指定して破産するまでトスを繰り返すプログラムを作る。\n",
+        "コイントスで表が出れば、&#36;1 ドルをもらい、裏が出れば &#36;1.5 ドル失うゲームとする。 金額を指定して破産するまでトスを繰り返すプログラムを作る。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tBSTnCfG_hnV",
+        "outputId": "9d0377d5-c738-4deb-e957-8b523350ddb3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 121
+        }
+      },
+      "source": [
+        "import random\n",
+        "def roll(num_trials):\n",
+        "    rolls = []\n",
+        "    for t in range(num_trials):\n",
+        "        rolls.append(random.randint(1, 6))\n",
+        "    return sum(rolls)/num_trials\n",
         "\n",
-        "Enter your starting amount: 10   \n",
-        "Tails! Current amount: 8.5   \n",
-        "Tails! Current amount: 7.0   \n",
-        "Tails! Current amount: 5.5   \n",
-        "Tails! Current amount: 4.0   \n",
-        "Tails! Current amount: 2.5   \n",
-        "Heads! Current amount: 3.5   \n",
-        "Tails! Current amount: 2.0   \n",
-        "Tails! Current amount: 0.5   \n",
-        "Tails! Current amount: -1.0   \n",
-        "Game over :( Current amount: -1.0. Coin tosses: 9  "
+        "\n",
+        "expected_value = 3.5\n",
+        "\n",
+        "print('Expected value: {0}'.format(expected_value))\n",
+        "\n",
+        "for trial in [100, 1000, 10000, 100000, 500000]:\n",
+        "    avg = roll(trial)\n",
+        "    print('Trials: {0} Trial average {1}'.format(trial, avg))"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Expected value: 3.5\n",
+            "Trials: 100 Trial average 3.49\n",
+            "Trials: 1000 Trial average 3.517\n",
+            "Trials: 10000 Trial average 3.5014\n",
+            "Trials: 100000 Trial average 3.50256\n",
+            "Trials: 500000 Trial average 3.497212\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
