Colaboratory を使用して作成しました

--- a/doingmath01.ipynb
+++ b/doingmath01.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "doingmath01.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNNWBqGYfQGDb2fDd5UVEtg",
+      "authorship_tag": "ABX9TyNGF5CgZZbJQ4Tj8c0tQmjX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9567,48 +9567,53 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "44pKC3cF3SZx"
-      },
-      "source": [
-        "Radius: 2  \n",
-        "Area: 12.566370614359172, Estimated (1000 darts): 12.576  \n",
-        "Area: 12.566370614359172, Estimated (100000 darts): 12.58176  \n",
-        "Area: 12.566370614359172, Estimated (1000000 darts): 12.560128  "
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
-        "id": "k46mEtRG0Lhu"
+        "id": "k46mEtRG0Lhu",
+        "outputId": "524c92f2-f0bb-4191-c4cb-b9395c6aa066",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 86
+        }
       },
       "source": [
         "import math\n",
         "import random\n",
+        "\n",
         "def estimate(radius, total_points):\n",
-        "center = (radius, radius)\n",
-        "in_circle = 0\n",
-        "for i in range(total_points):\n",
-        "x = random.uniform(0, 2*radius)\n",
-        "y = random.uniform(0, 2*radius)\n",
-        "p = (x, y)\n",
-        "# distance of the point created from circle's center\n",
-        "d = math.sqrt((p[0]-center[0])**2 + (p[1]-center[1])**2)\n",
-        "if d <= radius:\n",
-        "in_circle += 1\n",
-        "area_of_square = (2*radius)**2\n",
-        "return (in_circle/total_points)*area_of_square\n",
-        "34     Chapter 5 Programming SolutionsDoing Math with Python (Programming Challenge Solutions), © 2015 by Amit Saha\n",
-        "if __name__ == '__main__':\n",
-        "radius = float(input('Radius: '))\n",
+        "    center = (radius, radius)\n",
+        "    in_circle = 0\n",
+        "    for i in range(total_points):\n",
+        "        x = random.uniform(0, 2*radius)\n",
+        "        y = random.uniform(0, 2*radius)\n",
+        "        p = (x, y)\n",
+        "        # distance of the point created from circle's center\n",
+        "        d = math.sqrt((p[0]-center[0])**2 + (p[1]-center[1])**2)\n",
+        "        if d <= radius:\n",
+        "            in_circle += 1\n",
+        "    area_of_square = (2*radius)**2\n",
+        "    return (in_circle/total_points)*area_of_square\n",
+        "\n",
+        "\n",
+        "radius = float('2')\n",
+        "print ('Radius: {}'.format(radius))\n",
         "area_of_circle = math.pi*radius**2\n",
         "for points in [10**3, 10**5, 10**6]:\n",
-        "print('Area: {0}, Estimated ({1}): {2}'.\n",
-        "format(area_of_circle, points, estimate(radius, points)))"
+        "    print('Area: {0}, Estimated ({1}): {2}'.format(area_of_circle, points, estimate(radius, points)))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Radius: 2.0\n",
+            "Area: 12.566370614359172, Estimated (1000): 12.784\n",
+            "Area: 12.566370614359172, Estimated (100000): 12.53536\n",
+            "Area: 12.566370614359172, Estimated (1000000): 12.5688\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -9637,6 +9642,51 @@
         "\n",
         "ダーツを投げる回数を十分大きく取って、$\\pi$ が 3.14 に近い数字であることを確認する。\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GRUxn0o-BAvK",
+        "outputId": "f32588ce-b40b-41cb-a93a-851bca0da029",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        }
+      },
+      "source": [
+        "import math\n",
+        "import random\n",
+        "\n",
+        "def estimate(total_points):\n",
+        "    radius = 1\n",
+        "    center = (radius, radius)\n",
+        "    in_circle = 0\n",
+        "    for i in range(total_points):\n",
+        "        x = random.uniform(0, 2*radius)\n",
+        "        y = random.uniform(0, 2*radius)\n",
+        "        p = (x, y)\n",
+        "        # distance from circle's center\n",
+        "        d = math.sqrt((p[0]-center[0])**2 + (p[1]-center[1])**2)\n",
+        "        if d <= radius:\n",
+        "            in_circle += 1\n",
+        "    return (in_circle/total_points)*4\n",
+        "\n",
+        "\n",
+        "for points in [10**3, 10**5, 10**6]:\n",
+        "    print('Known value: {0}, Estimated ({1}): {2}'.format(math.pi, points, estimate(points)))"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Known value: 3.141592653589793, Estimated (1000): 3.076\n",
+            "Known value: 3.141592653589793, Estimated (100000): 3.13692\n",
+            "Known value: 3.141592653589793, Estimated (1000000): 3.143868\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
