Colaboratory を使用して作成しました

--- a/chartmath101equation.ipynb
+++ b/chartmath101equation.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmath101equation.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOFTVk9aRB53DqKYyHoNXpS",
+      "authorship_tag": "ABX9TyOReA4mD0dTYo+ZIE67zABN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,25 +26,16 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "wR5OuSSlt1cZ"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "P4kVFKYdt2jO"
       },
       "source": [
-        "メモ\n",
+        "# メモ\n",
         "\n",
-        "チャート式数学を Colab に写経するプロジェクト。"
+        "チャート式数学を Colab に写経するプロジェクト。\n",
+        "\n",
+        "これは数学I。青チャート。基本事項のところを写経する。使う道具は、Clabのマークダウンの中の LaTeX(MathJax)、コードセルでの%%LatexとPython。グラフはmatplotlib。とか。"
       ]
     },
     {
@@ -53,8 +44,6 @@
         "id": "A-_PdSWZuUxn"
       },
       "source": [
-        " # 数学Ⅰ\n",
-        "\n",
         " # 第1章 方程式と不等式"
       ]
     },
@@ -70,11 +59,58 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "aCeMVKViCAaY"
+      },
+      "source": [
+        "### 1.1.1 多項式 polynomial\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UP7_LX44CE1r"
+      },
+      "source": [
+        "1. 数や文字だけの積の形を単項式と言う。単項式の和として表される式を多項式という。\n",
+        "\n",
+        "1. 文字の部分が同じな項を同類項という\n",
+        "\n",
+        "1. 単項式の数の部分を係数、文字の指数の和を次数といい、次数が $n$ のとき $n$ 次式という。次数が $0$ の項を定数項という。\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "F5aBs4FkvKiu"
       },
       "source": [
-        ""
+        "### 1.1.2 多項式の加法・減法と乗法\n",
+        "\n",
+        "1. 多項式の計算における基本法則\n",
+        "  * 交換法則 $A+B=B+A,\\quad AB=BA$   \n",
+        "\n",
+        "結合法則 $(A+B) + C = A+(B+C), \\quad (AB)C=A(BC)$  \n",
+        "分配法則 $A(B+C)=AB+ AC,\\quad (A+B)C=AC+BC$\n",
+        "\n",
+        "1. 指数法則\n",
+        "\n",
+        "$a^ma^n= a^{m+n}, \\quad (a^m)^n = a^{mn}, (ab)^n = a^n b^n$\n",
+        "\n",
+        "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7gPm5SLkEg32"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
